--- a/htmlTest.html
+++ b/htmlTest.html
@@ -23,26 +23,28 @@
 			<div id = " sliders" >		
 			<div class="slidecontainer">
 			<input type="range" min="1" max="255" value="127" class="slider" id="redSlider"
-			oninput="sliderChange(this.value)">
+			oninput="redSliderChange(this.value)">
 			</div>
 			</div>	
 			
 			<div id = " sliders" >		
 			<div class="slidecontainer">
-			<input type="range" min="1" max="255" value="127" class="slider" id="greenSlider">
+			<input type="range" min="1" max="255" value="127" class="slider" id="greenSlider"
+			oninput="greenSliderChange(this.value)">
 			</div>
 			</div>
 			
 			<div id = " sliders" >		
 			<div class="slidecontainer">
-			<input type="range" min="1" max="255" value="127" class="slider" id="blueSlider">
+			<input type="range" min="1" max="255" value="127" class="slider" id="blueSlider"
+			oninput="blueSliderChange(this.value)">
 			<output id="output"></output>
 			</div>
 			</div>	
 		</div>
 		<div id ="sliders">
 		<button onclick="setRandomColor()">Random Color</button>
-		<label id ="demo">Hi</label>
+		<button onclick="setBoxColor()">Display Color</button>		
 		</div>
 		<!--/div-->
   </body>
