added timer functionality

--- a/htmlTest.html
+++ b/htmlTest.html
@@ -14,6 +14,7 @@
 
 	<!--color box-->
 		<div id = "colorBox" class = "box">					
+		
 		</div>
 		
 		<!--Sliders Div-->
@@ -42,9 +43,10 @@
 			</div>
 			</div>	
 		</div>
-		<div id ="sliders">
-		<button onclick="setRandomColor()">Random Color</button>
-		<button onclick="setBoxColor()">Display Color</button>		
+		<div >
+		<button id ="startButton" onclick="startGame()">Start Game</button>		
+		<button id ="showColorButton"onclick="showOriginalColor()">Show Original Color</button>
+		<button id ="resetButton" onclick="resetBoxColor()">Reset Color</button>			
 		</div>
 		<!--/div-->
   </body>
