--- a/htmlTest.html
+++ b/htmlTest.html
@@ -24,14 +24,14 @@
 			<div id = " sliders" >		
 			<div class="slidecontainer">
 			<input type="range" min="1" max="255" value="127" class="slider" id="redSlider"
-			oninput="redSliderChange(this.value)">
+			oninput="redSliderChange(this.value)">						
 			</div>
 			</div>	
 			
 			<div id = " sliders" >		
 			<div class="slidecontainer">
 			<input type="range" min="1" max="255" value="127" class="slider" id="greenSlider"
-			oninput="greenSliderChange(this.value)">
+			oninput="greenSliderChange(this.value)">						
 			</div>
 			</div>
 			
@@ -39,7 +39,7 @@
 			<div class="slidecontainer">
 			<input type="range" min="1" max="255" value="127" class="slider" id="blueSlider"
 			oninput="blueSliderChange(this.value)">
-			<output id="output"></output>
+			<output id="output"></output>						
 			</div>
 			</div>	
 		</div>
@@ -47,6 +47,7 @@
 		<button id ="startButton" onclick="startGame()">Start Game</button>		
 		<button id ="showColorButton"onclick="showOriginalColor()">Show Original Color</button>
 		<button id ="resetButton" onclick="resetBoxColor()">Reset Color</button>			
+		<button id ="testing" onclick="test()">test</button>			
 		</div>
 		<!--/div-->
   </body>
