finalized timer, beginning color scoring

--- a/htmlTest.html
+++ b/htmlTest.html
@@ -14,7 +14,8 @@
 
 	<!--color box-->
 		<div id = "colorBox" class = "box">					
-		
+		<div></div>
+		<div></div>
 		</div>
 		
 		<!--Sliders Div-->
@@ -47,7 +48,8 @@
 		<button id ="startButton" onclick="startGame()">Start Game</button>		
 		<button id ="showColorButton"onclick="showOriginalColor()">Show Original Color</button>
 		<button id ="resetButton" onclick="resetBoxColor()">Reset Color</button>			
-		<button id ="testing" onclick="test()">test</button>			
+		<button id ="testing" onclick="setRandomColor()">set random color</button>			
+		<button id ="compare" onclick="stopTimer()">compare</button>			
 		</div>
 		<!--/div-->
   </body>
