added styling and js fixes

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <body>  
   
 	<div class = "outerDiv">
-	<img src = "colorllama.png" class = "logo"/>
+	<img src = "colorllama.png" class = "logo" />
 	<!--color box-->
 		<div id = "colorBox" class = "box"></div>
-		
+		<!--NO CHEATING DARN IT-->
 		<!--Sliders Div-->		
 		<div class = "slidersBox">
 			<div  id = "slidersContainer" >
