added icons in html file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+	<link rel=icon href="colorllamalogo.png">
+	<title>Color LLama</title>
     <meta charset="utf-8">
     <title>title</title>
     <link rel="stylesheet" href="style.css">
