adjusted div overflow

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<button id ="startButton" onclick="startGame()">Start Game</button>		
 					<!--button id ="showColorButton"onclick="showOriginalColor()">Show Original Color</button-->
 					<button id ="resetButton" onclick="resetBoxColor()">Reset Color</button>			
-					<!--button id ="testing" onclick="setRandomColor()">Set Random Color</button-->			
+					<!--button id ="speedRound" onclick="speedRound()">Speed Round</button-->			
 					<button id ="compare" onclick="stopTimer()">Compare</button>		
 				</div>
 		
