--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	<link rel=icon href="colorllamalogo.png">
+	<link rel=icon href="colorllamalogo.svg">
 	<title>Color LLama</title>
     <meta charset="utf-8">
     <title>title</title>
@@ -13,7 +13,7 @@
   <body>
   
 	<div class = "outerDiv">
-	<img src = "colorllama.png" class = "logo" />
+	<img src = "colorllama.svg" class = "logo" />
 		<div id = "colorBox" class = "box"></div>
 		<div class = "slidersBox">
 			<div  id = "slidersContainer" >
